# Build-var-Spoof

./: README.md  build.gradle.kts  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle.kts
module/src/main/cpp/: CMakeLists.txt
module/src/main/cpp/logging/include/: logging.hpp
module/src/main/cpp/zygisk/: main.cpp
module/template/: action.sh  autopif.sh  customize.sh  verify.sh
